# rust-postgres-sync

./: Cargo.toml  README.md
benches/: connect_local.rs  connect_remote.rs
src/: lib.rs  main.rs
