[package]
name = "rust-postgres-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.2"
r2d2_postgres = "0.18.1"
r2d2 = "0.8.9"
rayon = "1.5.1"
histo = "0.1.0"
openssl = "0.10.38"
postgres-openssl = "0.5.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "connect_remote"
harness = false